# labindex-shiori

./: .gitignore  Clear.bat  Parse.bat  README.ja.md  README.md  README.zh.md  Scan.bat  Start.bat  config.example.yaml  pick_folder.ps1  pyproject.toml  requirements.txt
docs/: PROJECT_BRIEF.md
docs/phases/: ACTIVE_PHASE.md
locales/: en.json  ja.json  zh.json
scripts/: update_researcher.py
src/: __init__.py  config.py  main.py
src/database/: schema.py
src/indexer/: classifier.py  engine.py
src/overlay/: manager.py
src/parser/: cad_parser.py  docx_parser.py  engine.py  path_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
src/relation/: __init__.py  engine.py
src/scanner/: engine.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
